--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 tensorflow==2.16.1
-pandas==2.2.3
-numpy==1.26.4
-scikit-learn==1.6.0
-tensorboard==2.15.2
-matplotlib==3.9.4
-streamlit==1.41.0
+pandas
+numpy
+scikit-learn
+tensorboard
+matplotlib
+streamlit
